fixed text boxes coming out of box

--- a/style_sheets/contactus_stylesheet.css
+++ b/style_sheets/contactus_stylesheet.css
@@ -3,8 +3,6 @@ body{
     background-size: cover;
     background-repeat: no-repeat;	
 }
-
-
 .box{
 	width: 600px;
 	padding: 40px;
@@ -34,7 +32,7 @@ body{
 	margin: 20px auto;
 	text-align: center;
 	border: 2px solid #3498db;
-	padding: 14px 100px;
+	padding: 15px 50px;
 	width: 500px;
 	outline: none;
 	color: black;
